  (Christopher Zimmermann, review by Anil Madhavapeddy)

### Bug fixes:

- #11112: harden -use-runtime against spaces or quotes in the provided path
  (Gabriel Scherer, report by Brahima Dibassi, review by David Allsopp)

- #11068, #11070: Fix typo in function name given in Unix_error exception for
  Unix.readlink on Windows.
  (David Allsopp, report by Xia Li-yao)


- #11077: Make dumpobj compatible with absence of naked pointer support
  (Olivier Nicole and Jan Midtgaard, review by Gabriel Scherer)

OCaml 4.14.0
----------------

### Language features:

- #10462: Add attribute to produce a compiler error for polls.
  (Sadiq Jaffer, review by Mark Shinwell, Stephen Dolan
   and Guillaume Munch-Maccagnoni)

- #10437: Allow explicit binders for type variables.
  (Stephen Dolan, review by Leo White)

- #10441: Remove unnecessary parentheses surrounding immediate objects.
  Allow 'object ... end # f', 'f object ... end', etc.
  (Yan Dong, review by Nicolás Ojeda Bär, Florian Angeletti and Gabriel Scherer)

- #181, #9760, #10740: opt-in tail-modulo-cons (TMC) transformation
    let[@tail_mod_cons] rec map f li = ...
  (Frédéric Bour, Gabriel Scherer, Basile Clément,
   review by Basile Clément and Pierre Chambart,
   tested by Konstantin Romanov)

### Runtime system:

* #9391, #9424: Fix failed assertion in runtime due to ephemerons *set_* and
  *blit_* function during Mark phase
  (François Bobot, reported by Stephen Dolan, reviewed by Damien Doligez)

- #10195, #10680: Speed up GC by prefetching during marking
  (Stephen Dolan, review by Xavier Leroy, Guillaume Munch-Maccagnoni,
   Jacques-Henri Jourdan, Damien Doligez and Leo White)

- #10549: Stack overflow detection and naked pointers checking for ARM64
  (Xavier Leroy, review by Stephen Dolan)

* #10675, #10937: Emit deprecation warnings when old C runtime function names
  are used.  This will break C stub code that uses these old names and
  treats warnings as errors.  The workaround is to use the new names.